# body-form-detector

./: .gitignore  README.md  pyproject.toml
skeleton_tracker/: README.md
skeleton_tracker/src/skeleton_tracker/: hello.py  track.py
src/skeleton_tracker/: track.py
