[project]
name = "skeleton-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lapx>=0.9.3",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "ultralytics>=8.3.240",
]

[tool.uv]
package = true

[project.scripts]
track = "skeleton_tracker.track:main"
